--- a/subcategories/lifestyle-everyday-miscellaneous.html
+++ b/subcategories/lifestyle-everyday-miscellaneous.html
@@ -365,6 +365,10 @@
                                 <h3 class="font-medium text-gray-800">Lottery Calculator</h3>
                                 <p class="text-sm text-gray-600">Calculate lottery odds and probabilities</p>
                             </a>
+                            <a href="../phonetic-alphabet-translator.html" class="block p-3 bg-gray-50 rounded-lg hover:bg-blue-50 transition-colors">
+                                <h3 class="font-medium text-gray-800">NATO Phonetic Alphabet Translator</h3>
+                                <p class="text-sm text-gray-600">Spell any text using the Alfa-Bravo call signs for clear communication.</p>
+                            </a>
                         </div>
                     </div>
                 </section>
