--- a/morse-code-translator.html
+++ b/morse-code-translator.html
@@ -467,3 +467,80 @@
     });
 
     morseForm.addEventListener('submit', (event) => {
+      event.preventDefault();
+      try{
+        const input = morseInput.value.trim();
+        if(!input){
+          throw new Error('Enter Morse code to translate.');
+        }
+        const normalized = normalizeInputMorse(input);
+        const text = morseToText(normalized);
+        plainOutput.textContent = text;
+        lastPlain = text;
+        btnCopyPlain.disabled = false;
+        morseError.classList.add('hidden');
+        morseError.textContent = '';
+      }catch(err){
+        const message = err instanceof Error ? err.message : 'Unable to translate Morse code.';
+        morseError.textContent = message;
+        morseError.classList.remove('hidden');
+        plainOutput.textContent = '—';
+        lastPlain = '';
+        btnCopyPlain.disabled = true;
+      }
+    });
+
+    btnCopyMorse.addEventListener('click', async () => {
+      if(btnCopyMorse.disabled || !lastMorse){ return; }
+      try{
+        const canonical = lastMorse.replace(/\u00B7/g, '.').replace(/\u2212/g, '-').replace(/\u2013|\u2014/g, '-');
+        await navigator.clipboard.writeText(canonical);
+        btnCopyMorse.textContent = 'Copied!';
+        setTimeout(() => { btnCopyMorse.textContent = 'Copy Morse'; }, 1500);
+      }catch(error){
+        console.error('Clipboard error', error);
+        btnCopyMorse.textContent = 'Press Ctrl+C';
+        setTimeout(() => { btnCopyMorse.textContent = 'Copy Morse'; }, 2000);
+      }
+    });
+
+    btnCopyPlain.addEventListener('click', async () => {
+      if(btnCopyPlain.disabled || !lastPlain){ return; }
+      try{
+        await navigator.clipboard.writeText(lastPlain);
+        btnCopyPlain.textContent = 'Copied!';
+        setTimeout(() => { btnCopyPlain.textContent = 'Copy Text'; }, 1500);
+      }catch(error){
+        console.error('Clipboard error', error);
+        btnCopyPlain.textContent = 'Press Ctrl+C';
+        setTimeout(() => { btnCopyPlain.textContent = 'Copy Text'; }, 2000);
+      }
+    });
+
+    btnClearPlain.addEventListener('click', () => {
+      plainInput.value = '';
+      morseOutput.textContent = '—';
+      plainError.classList.add('hidden');
+      plainError.textContent = '';
+      lastMorse = '';
+      btnCopyMorse.disabled = true;
+      plainInput.focus();
+    });
+
+    btnClearMorse.addEventListener('click', () => {
+      morseInput.value = '';
+      plainOutput.textContent = '—';
+      morseError.classList.add('hidden');
+      morseError.textContent = '';
+      lastPlain = '';
+      btnCopyPlain.disabled = true;
+      morseInput.focus();
+    });
+
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      document.getElementById('mobile-menu')?.classList.toggle('hidden');
+    });
+  })();
+</script>
+</body>
+</html>
