--- a/subcategories/lifestyle-everyday-miscellaneous.html
+++ b/subcategories/lifestyle-everyday-miscellaneous.html
@@ -143,6 +143,11 @@
             <p class="text-sm text-slate-600">Fraction simplifiers, ratio builders, random generators, and equation solvers.</p>
             <a href="../fraction.html" class="text-sm font-semibold text-blue-600 hover:underline">Try the Fraction Calculator →</a>
           </div>
+          <div class="bg-white rounded-xl shadow p-5 space-y-2">
+            <h3 class="text-lg font-semibold text-slate-900">Science &amp; learning</h3>
+            <p class="text-sm text-slate-600">Quick biology and genetics helpers for the classroom or lab notes.</p>
+            <a href="../dna-to-protein-translator.html" class="text-sm font-semibold text-blue-600 hover:underline">Translate DNA to protein →</a>
+          </div>
         </div>
       </section>
 
