--- a/index.html
+++ b/index.html
@@ -417,6 +417,66 @@
                     </div>
                 </a>
 
+                <!-- Science Category -->
+                <a href="science.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                    <div class="bg-gradient-to-r from-indigo-500 to-sky-500 p-6 text-white">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h3 class="text-xl font-bold mb-2">Science</h3>
+                                <p class="text-indigo-100">18 Calculators</p>
+                            </div>
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-600 mb-4">Physics, chemistry, astronomy, biology, and lab measurement tools.</p>
+                        <div class="space-y-2">
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-indigo-500 rounded-full mr-2"></span>
+                                Molecular &amp; Lab Calculators
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-indigo-500 rounded-full mr-2"></span>
+                                Physics &amp; Astronomy
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-indigo-500 rounded-full mr-2"></span>
+                                Earth &amp; Atmospheric Science
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Geometry Category -->
+                <a href="geometry.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                    <div class="bg-gradient-to-r from-amber-500 to-orange-500 p-6 text-white">
+                        <div class="flex items-center justify-between">
+                            <div>
+                                <h3 class="text-xl font-bold mb-2">Geometry</h3>
+                                <p class="text-amber-100">22 Calculators</p>
+                            </div>
+                            <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2l7.794 4.5v9L12 20.999 4.206 15.5v-9L12 2z"></path></svg>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <p class="text-gray-600 mb-4">Area, perimeter, volume, and coordinate geometry calculators.</p>
+                        <div class="space-y-2">
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Plane Geometry
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Solid Geometry
+                            </div>
+                            <div class="flex items-center text-sm text-gray-500">
+                                <span class="w-2 h-2 bg-amber-500 rounded-full mr-2"></span>
+                                Coordinate &amp; Trigonometry
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <!-- Lifestyle & Everyday Category -->
                 <a href="lifestyle-everyday.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-indigo-500 to-indigo-600 p-6 text-white">
