--- a/401k.html
+++ b/401k.html
@@ -49,9 +49,9 @@
     html{font-size:16px;scroll-behavior:smooth}
     body{
       margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      font-family: 'Inter', -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
       color:var(--text);
-      background:var(--bg);
+      background:#f8fafc;
       line-height:1.6;
     }
 
@@ -63,29 +63,9 @@
     }
     .skip-link:focus{top:8px;outline:3px solid #fff;outline-offset:2px}
 
-    /* Header (non-sticky as required) */
-    header{background:var(--surface);border-bottom:1px solid var(--border)}
-    .header-inner{display:grid;grid-template-columns:auto 1fr auto;gap:.75rem;align-items:center;max-width:var(--container);margin:0 auto;padding:.75rem 1rem}
-    .logo{font-weight:800;color:var(--primary);text-decoration:none;font-size:1.125rem}
-    .logo:focus{outline:3px solid var(--primary);outline-offset:2px;border-radius:4px}
-    .site-search{display:flex;gap:.5rem;align-items:center}
-    .site-search input[type="search"]{
-      flex:1 1 auto;min-width:0;padding:.6rem .75rem;border:1px solid var(--border);border-radius:10px;background:#fff
-    }
-    .site-search input[type="search"]:focus{outline:3px solid var(--primary);outline-offset:2px}
     .btn{display:inline-flex;align-items:center;justify-content:center;gap:.5rem;min-height:var(--min-touch);min-width:var(--min-touch);padding:.65rem 1rem;border-radius:10px;border:1px solid transparent;background:var(--primary);color:#fff;font-weight:700;cursor:pointer}
     .btn:hover{background:var(--primary-600)}
     .btn:focus{outline:3px solid var(--primary);outline-offset:2px}
-
-    nav.main-nav{display:none}
-    @media (max-width:380px){
-      .header-inner{grid-template-columns:auto auto;grid-template-areas:"logo act" "search search"}
-      .logo{grid-area:logo}
-      .header-actions{grid-area:act;justify-self:end}
-      .site-search{grid-area:search}
-    }
-
-    main{max-width:var(--container);margin:0 auto;padding:1rem}
     .breadcrumbs{font-size:.9rem;color:var(--muted);margin:.25rem 0 1rem}
     .breadcrumbs a{color:var(--primary);text-decoration:none}
     .breadcrumbs a:focus{outline:3px solid var(--primary);outline-offset:2px;border-radius:4px}
@@ -293,30 +273,65 @@
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
 
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
 
 <a class="skip-link" href="#main">Skip to main content</a>
-<header aria-label="Site header" role="banner">
-<div class="header-inner">
-<a aria-label="CalcDomain — Home" class="logo" href="/">CalcDomain</a>
-<form aria-label="Site-wide" class="site-search" role="search">
-<label class="sr-only" for="q">Search calculators</label>
-<input autocomplete="off" id="q" name="q" placeholder="Search calculators…" type="search"/>
-<button aria-label="Submit search" class="btn btn-primary" type="submit">Search</button>
-</form>
-<div class="header-actions">
-<a class="btn btn-secondary" href="https://calcdomain.com/finance.html">Finance</a>
-</div>
-</div>
-</header>
-<main id="main" role="main">
-<nav aria-label="Breadcrumb" class="breadcrumbs">
-<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/finance-retirement-and-pensions.html">Retirement &amp; Pensions
-</a> / 401(k) Calculator
+<header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
+        <div class="flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+
+            <div class="w-full max-w-md hidden md:block mx-8">
+                <div class="relative">
+                    <input type="search" id="search-input" placeholder="Search for a calculator..."
+                           class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                           autocomplete="off">
+                    <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+                         fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                    </svg>
+                    <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+                </div>
+            </div>
+
+            <div class="hidden md:flex items-center space-x-6 text-sm">
+                <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+                <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+            </div>
+
+            <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+
+        <div id="mobile-menu" class="md:hidden mt-4 hidden">
+            <div class="space-y-2">
+                <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+                <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+            </div>
+        </div>
     </nav>
-<h1>401(k) Calculator</h1>
-<p class="lead">Estimate your 401(k) growth with employer match, salary increases, fees, and inflation. Built for clarity and accuracy, this calculator helps you plan contributions and visualize your projected balance and retirement income.</p>
-<div class="calculator-layout" id="calcGrid">
+</header>
+<main id="main" class="container mx-auto px-4 lg:px-6 py-10" role="main">
+
+<div class="flex flex-col lg:flex-row gap-8">
+    <section class="w-full lg:w-2/3 space-y-8">
+        <nav class="text-sm text-gray-600" aria-label="Breadcrumb">
+            <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+            <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+            <a href="subcategories/finance-retirement.html" class="hover:text-blue-600">Retirement &amp; Pensions</a> &raquo;
+            <span class="text-gray-900">401(k) Calculator</span>
+        </nav>
+
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h1 class="text-3xl font-extrabold text-gray-900 mb-2">401(k) Calculator</h1>
+            <p class="text-gray-600 text-base md:text-lg leading-relaxed">Estimate your 401(k) growth with employer match, salary increases, fees, and inflation. Built for clarity and accuracy, this calculator helps you plan contributions and visualize your projected balance and retirement income.</p>
+
+            <div class="calculator-layout mt-6" id="calcGrid">
 <section aria-labelledby="calc-heading" class="card" id="calculator">
 <h2 class="sr-only" id="calc-heading">Interactive 401(k) Calculator</h2>
 <div class="form-group split">
@@ -544,8 +559,10 @@
 </div>
 <p class="note" id="resultNote">Assumes consistent contributions and returns. Results are estimates, not guarantees.</p>
 </section>
-</div>
-<article aria-label="Authoritative content" class="content">
+            </div>
+        </div>
+
+        <article aria-label="Authoritative content" class="content bg-white p-6 rounded-lg shadow-md prose prose-slate max-w-none">
 <section>
 <h2>Data Source and Methodology</h2>
 <p>
@@ -595,7 +612,7 @@
 <li>Each year, salary S_y increases by 3%.</li>
 <li>You contribute C_emp,y = min(10% × S_y, deferral + catch-up if age ≥ 50).</li>
 <li>Your employer contributes C_er,y = min(C_emp,y, 6% × S_y) × 50%.</li>
-<li>If employee (up to deferral limit) + employer exceeds the annual additions limit, reduce employer match.</li>
+<li>If employee (up to deferral limit) + employer exceeds the annual additions limit, the tool trims employer match.</li>
 <li>Grow the account: B_{y+1} = (B_y + contributions) × (1 + (7 − 0.5)/100) = × 1.065.</li>
 <li>At retirement, convert to today’s dollars by dividing by (1 + 0.025)^(years) and estimate income with the 4% rule.</li>
 </ol>
@@ -624,7 +641,42 @@
           <br/>Ultima revisione per l'accuratezza in data: <time id="reviewDate"></time>.
         </p>
 </div>
-</article>
+        </article>
+    </section>
+    <aside class="w-full lg:w-1/3 space-y-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">Related Calculators</h2>
+            <ul class="space-y-2 text-sm text-blue-600">
+                <li><a href="retirement.html" class="hover:underline">Retirement Planner</a></li>
+                <li><a href="pension.html" class="hover:underline">Pension Calculator</a></li>
+                <li><a href="pension-payout.html" class="hover:underline">Pension Payout Estimator</a></li>
+                <li><a href="rmd.html" class="hover:underline">RMD Calculator</a></li>
+                <li><a href="social-security.html" class="hover:underline">Social Security Benefits Estimator</a></li>
+            </ul>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-xl font-semibold text-gray-900 mb-4">Quick Tips</h2>
+            <ul class="list-disc pl-5 space-y-2 text-sm text-gray-700">
+                <li>Enable IRS limits to cap contributions automatically.</li>
+                <li>Use salary growth to reflect raises or inflation adjustments.</li>
+                <li>Toggle inflation adjustment to view results in today’s dollars.</li>
+            </ul>
+        </div>
+    </aside>
+</div>
+
+<footer class="bg-white border-t">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+        <p>&copy; <span id="year">2025</span> CalcDomain. All Rights Reserved.</p>
+        <div class="mt-4 space-x-4">
+            <a href="about.html" class="hover:text-blue-600">About</a>
+            <a href="contact.html" class="hover:text-blue-600">Contact</a>
+            <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+            <a href="terms.html" class="hover:text-blue-600">Terms</a>
+        </div>
+    </div>
+</footer>
+
 </main>
 <!-- Standard Footer --> 
 <script defer="">
