--- a/finance.html
+++ b/finance.html
@@ -270,13 +270,13 @@
                                     <h3 class="font-semibold text-gray-800">Retirement Savings Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate retirement savings calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="401k-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="401k.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">401k Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate 401k calculator quickly and accurately.</p>
+                                    <h3 class="font-semibold text-gray-800">401(k) Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Project 401(k) savings with employer match, IRS limits, fees, and inflation.</p>
                                 </div>
                             </a>                            <a href="roth-ira.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
