--- a/auto-lease-calculator.html
+++ b/auto-lease-calculator.html
@@ -464,7 +464,7 @@
                     <ul class="space-y-2 text-gray-600">
                         <li><a href="mortgage-calculator.html" class="hover:text-blue-600">Mortgage Calculator</a></li>
                         <li><a href="investment-calculator.html" class="hover:text-blue-600">Investment Calculator</a></li>
-                        <li><a href="retirement-calculator.html" class="hover:text-blue-600">Retirement Calculator</a></li>
+                        <li><a href="retirement.html" class="hover:text-blue-600">Retirement Calculator</a></li>
                         <li><a href="budget-calculator.html" class="hover:text-blue-600">Budget Calculator</a></li>
                     </ul>
                 </div>
