--- a/retirement.html
+++ b/retirement.html
@@ -83,7 +83,7 @@
   }
   </script>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-gray-50 text-gray-900">
 
   <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
@@ -133,7 +133,7 @@
     </nav>
   </header>
 
-  <main class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 lg:px-6 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <section class="w-full lg:w-2/3">
@@ -346,7 +346,7 @@
 
   <footer class="bg-white border-t">
     <div class="container mx-auto px-6 py-8 text-center text-gray-600">
-      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <p>&copy; <span id="year">2025</span> CalcDomain. All Rights Reserved.</p>
     </div>
   </footer>
 
@@ -378,7 +378,8 @@
       calcBtn: document.getElementById('calcBtn'),
       exampleBtn: document.getElementById('exampleBtn'),
       resetBtn: document.getElementById('resetBtn'),
-      lastUpdated: document.getElementById('lastUpdated')
+      lastUpdated: document.getElementById('lastUpdated'),
+      year: document.getElementById('year')
     };
 
     const fmtGBP = (v) => {
@@ -554,7 +555,12 @@
 
     document.addEventListener('DOMContentLoaded', () => {
       const d = new Date();
-      els.lastUpdated.textContent = d.toLocaleDateString('en-GB',{year:'numeric',month:'long',day:'numeric'});
+      if (els.lastUpdated) {
+        els.lastUpdated.textContent = d.toLocaleDateString('en-GB',{year:'numeric',month:'long',day:'numeric'});
+      }
+      if (els.year) {
+        els.year.textContent = d.getFullYear();
+      }
       loadExample();
 
       const toggle = document.getElementById('mobile-menu-toggle');
