--- a/finance.html
+++ b/finance.html
@@ -262,13 +262,13 @@
                     <div>
                         <h2 class="text-2xl font-bold border-b pb-2 mb-6">Retirement</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="retirement-savings-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="retirement.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
-                                    <h3 class="font-semibold text-gray-800">Retirement Savings Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate retirement savings calculator quickly and accurately.</p>
+                                    <h3 class="font-semibold text-gray-800">Retirement Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Plan retirement savings, withdrawals, Social Security, and contribution targets in today’s pounds.</p>
                                 </div>
                             </a>                            <a href="401k.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -300,7 +300,15 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Pension Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate pension calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Model defined benefit and defined contribution pension outcomes.</p>
+                                </div>
+                            </a>                            <a href="pension-payout.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Pension Payout Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Project your pension pot and convert it into sustainable retirement income.</p>
                                 </div>
                             </a>                            <a href="social-security-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
