--- a/subcategories/finance-retirement.html
+++ b/subcategories/finance-retirement.html
@@ -69,6 +69,16 @@
                             </div>
                         </a>
 
+                        <a href="../pension-payout.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <div class="bg-blue-100 p-3 rounded-full">
+                                <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
+                            </div>
+                            <div>
+                                <h3 class="font-semibold text-gray-800">Pension Payout Calculator</h3>
+                                <p class="text-sm text-gray-600 mt-1">Translate pension savings into inflation-aware monthly income over your retirement horizon.</p>
+                            </div>
+                        </a>
+
                         <a href="../pension.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                             <div class="bg-blue-100 p-3 rounded-full">
                                 <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/></svg>
