--- a/area.html
+++ b/area.html
@@ -442,12 +442,12 @@
         <p><strong>Tutti i calcoli si basano rigorosamente sulle formule e sui dati forniti da questa fonte.</strong></p>
         <h2>The Formula Explained</h2>
         <div class="formula-box">
-          <p><strong>Rectangle:</strong> <code class="formula">A = l \times w</code></p>
-          <p><strong>Circle:</strong> <code class="formula">A = \pi r^{2}</code> or <code class="formula">A = \frac{\pi d^{2}}{4}</code></p>
-          <p><strong>Triangle (base-height):</strong> <code class="formula">A = \frac{b \times h}{2}</code></p>
-          <p><strong>Trapezoid:</strong> <code class="formula">A = \frac{(a + b)}{2} \times h</code></p>
-          <p><strong>Parallelogram:</strong> <code class="formula">A = b \times h</code></p>
-          <p><strong>Regular polygon (n sides):</strong> <code class="formula">A = \frac{n s^{2}}{4 \tan(\pi/n)}</code></p>
+          <p><strong>Rectangle:</strong> A = l × w</p>
+          <p><strong>Circle:</strong> A = πr² or A = πd²⁄4</p>
+          <p><strong>Triangle (base-height):</strong> A = (b × h) ÷ 2</p>
+          <p><strong>Trapezoid:</strong> A = [(a + b) ÷ 2] × h</p>
+          <p><strong>Parallelogram:</strong> A = b × h</p>
+          <p><strong>Regular polygon (n sides):</strong> A = [n × s²] ÷ [4 × tan(π⁄n)]</p>
         </div>
         <h2>Glossary of Variables</h2>
         <table aria-label="Glossary of input and output terms" class="glossary">
