--- a/social-security.html
+++ b/social-security.html
@@ -465,30 +465,25 @@
         <h2 id="data-method-title">Data Source and Methodology</h2>
         <p><strong>Authoritative Data Sources:</strong></p>
         <ul class="clean">
-          <li>Social Security Administration (SSA), “Primary Insurance Amount (PIA) Formula and Bend Points,” latest official bend points: https://www.ssa.gov/oact/cola/bendpoints.html</li>
-          <li>SSA Program Operations Manual System (POMS), Early/Late Retirement Adjustments: https://secure.ssa.gov/poms.nsf/lnx/0300615001</li>
-          <li>SSA, Retirement Planner: https://www.ssa.gov/benefits/retirement/</li>
-          <li>SSA, Cost-of-Living Adjustment (COLA): https://www.ssa.gov/cola/</li>
-          <li>Longevity reference: SSA Actuarial Life Table overview: https://www.ssa.gov/oact/STATS/table4c6.html</li>
+          <li><a href="https://www.ssa.gov/oact/cola/bendpoints.html" rel="nofollow noopener" target="_blank">SSA – Primary Insurance Amount (PIA) bend points</a></li>
+          <li><a href="https://secure.ssa.gov/poms.nsf/lnx/0300615001" rel="nofollow noopener" target="_blank">SSA POMS – Early and late retirement adjustments</a></li>
+          <li><a href="https://www.ssa.gov/benefits/retirement/" rel="nofollow noopener" target="_blank">SSA Retirement Planner</a></li>
+          <li><a href="https://www.ssa.gov/cola/" rel="nofollow noopener" target="_blank">SSA Cost-of-Living Adjustment (COLA)</a></li>
+          <li><a href="https://www.ssa.gov/oact/STATS/table4c6.html" rel="nofollow noopener" target="_blank">SSA Actuarial Life Table overview</a></li>
         </ul>
-        <p><em>Tutti i calcoli si basano rigorosamente sulle formule e sui dati forniti da questa fonte.</em></p>
+        <p><em>All calculations are strictly based on the formulas and data provided by these sources.</em></p>
       </section>
 
       <section aria-labelledby="formula-title" class="card">
         <h2 id="formula-title">The Formulas Explained</h2>
-        <div aria-label="Mathematical formulas" class="formula-box">
-          $$\textbf{AIME (approx.)} = \frac{\text{Average Annual Earnings}}{12}$$
-          $$\textbf{PIA} = 0.90 \cdot \min(AIME,b_1) + 0.32 \cdot \min(\max(AIME-b_1,0),\, b_2-b_1) + 0.15 \cdot \max(AIME-b_2,0)$$
-          $$\text{Early Reduction} = \left[\min(m,36)\cdot\frac{5}{9}\% \right] + \left[\max(m-36,0)\cdot\frac{5}{12}\%\right]$$
-          $$\text{Delayed Credit} = M \cdot \frac{2}{3}\% \quad (\text{per month after FRA, up to age 70})$$
-          $$\text{Benefit at Claim Age} =
-          \begin{cases}
-          \text{PIA}\cdot(1-\text{Early Reduction}) &amp; \text{if claim age }&lt;\text{FRA}\\
-          \text{PIA} &amp; \text{if claim age }=\text{FRA}\\
-          \text{PIA}\cdot(1+\text{Delayed Credit}) &amp; \text{if claim age }&gt;\text{FRA}
-          \end{cases}$$
-          $$\text{COLA Projection (optional)}: \quad \text{PIA}_{\text{claim}} = \text{PIA}_{y_0}\cdot(1+c)^{(y_{\text{claim}}-y_0)}$$
-          where $b_1,b_2$ are SSA bend points for the selected year; $m$ is months before FRA; $M$ is months after FRA; $c$ is annual COLA.
+        <div class="formula-box" aria-label="Mathematical formulas">
+          <p><strong>AIME (approx.)</strong> = Average annual earnings ÷ 12</p>
+          <p><strong>PIA</strong> = 0.90 × min(AIME, b<sub>1</sub>) + 0.32 × min(max(AIME − b<sub>1</sub>, 0), b<sub>2</sub> − b<sub>1</sub>) + 0.15 × max(AIME − b<sub>2</sub>, 0)</p>
+          <p><strong>Early reduction</strong> = [min(m, 36) × 5⁄9%] + [max(m − 36, 0) × 5⁄12%]</p>
+          <p><strong>Delayed credit</strong> = M × 2⁄3% &nbsp;(per month after FRA, up to age 70)</p>
+          <p><strong>Benefit at claim age</strong> = PIA adjusted by early reduction or delayed credit depending on whether the claiming age is before, at, or after FRA.</p>
+          <p><strong>COLA projection (optional)</strong>: PIA<sub>claim</sub> = PIA<sub>y₀</sub> × (1 + c)<sup>(y<sub>claim</sub> − y₀)</sup></p>
+          <p class="muted text-sm">b<sub>1</sub> and b<sub>2</sub> are SSA bend points for the selected year; m is months before FRA; M is months after FRA; c is the annual COLA assumption.</p>
         </div>
       </section>
 
