--- a/area.html
+++ b/area.html
@@ -425,8 +425,8 @@
           </div>
           <h3 style="margin-top:1rem">Formula and substitution</h3>
           <div aria-live="polite" class="formula-box">
-            <div id="res-formula" style="margin-bottom:.5rem"><code class="formula">A = l \times w</code></div>
-            <div id="res-substitution"><code class="formula">A = 0 \times 0</code></div>
+            <div id="res-formula" style="margin-bottom:.5rem">A = l × w</div>
+            <div id="res-substitution">A = 0 × 0</div>
           </div>
         </section>
       </div>
@@ -439,15 +439,15 @@
           For unit conversion factors:
           <a href="https://www.nist.gov/pml/special-publication-811" rel="noopener" target="_blank">NIST Special Publication 811 — Guide for the Use of the International System of Units (SI)</a>, 2008 Edition (updated 2023).
         </p>
-        <p><strong>Tutti i calcoli si basano rigorosamente sulle formule e sui dati forniti da questa fonte.</strong></p>
+        <p><strong>All calculations are strictly based on the formulas and data provided by these sources.</strong></p>
         <h2>The Formula Explained</h2>
         <div class="formula-box">
           <p><strong>Rectangle:</strong> A = l × w</p>
-          <p><strong>Circle:</strong> A = πr² or A = πd²⁄4</p>
+          <p><strong>Circle:</strong> A = π × r² or A = π × d² ÷ 4</p>
           <p><strong>Triangle (base-height):</strong> A = (b × h) ÷ 2</p>
           <p><strong>Trapezoid:</strong> A = [(a + b) ÷ 2] × h</p>
           <p><strong>Parallelogram:</strong> A = b × h</p>
-          <p><strong>Regular polygon (n sides):</strong> A = [n × s²] ÷ [4 × tan(π⁄n)]</p>
+          <p><strong>Regular polygon (n sides):</strong> A = (n × s²) ÷ [4 × tan(π ÷ n)]</p>
         </div>
         <h2>Glossary of Variables</h2>
         <table aria-label="Glossary of input and output terms" class="glossary">
@@ -472,20 +472,20 @@
         <ol>
           <li>Select “Rectangle”, choose unit “ft”.</li>
           <li>Enter Length = 12, Width = 9.</li>
-          <li>Apply the formula: <code class="formula">A = l \times w</code>.</li>
-          <li>Substitute: <code class="formula">A = 12 \times 9 = 108 \text{ ft}^{2}</code>.</li>
-          <li>Convert to m²: <code class="formula">108 \text{ ft}^{2} \approx 10.033 \text{ m}^{2}</code>.</li>
+          <li>Apply the formula: A = l × w.</li>
+          <li>Substitute: A = 12 × 9 = 108 ft².</li>
+          <li>Convert to m²: 108 ft² ≈ 10.033 m².</li>
         </ol>
         <h2>Frequently Asked Questions (FAQ)</h2>
         <div>
           <h3>What if I only know the circle diameter?</h3>
-          <p>You can input the diameter directly; the tool uses <code class="formula">A = \frac{\pi d^{2}}{4}</code>.</p>
+          <p>You can input the diameter directly; the tool uses A = π × d² ÷ 4.</p>
           <h3>Can I change precision?</h3>
           <p>Yes. Use the “Display precision” selector to show 0–6 decimal places without affecting internal accuracy.</p>
           <h3>Do I need perpendicular height for triangles?</h3>
           <p>Yes. The height must be perpendicular to the base for the base–height formula to be valid.</p>
           <h3>How do regular polygon inputs work?</h3>
-          <p>Provide the number of sides n (≥ 3) and side length s. The tool applies <code class="formula">A = \frac{n s^{2}}{4 \tan(\pi/n)}</code>.</p>
+          <p>Provide the number of sides n (≥ 3) and side length s. The tool applies A = (n × s²) ÷ [4 × tan(π ÷ n)].</p>
           <h3>Why do you also show m² and ft²?</h3>
           <p>These are the most commonly used area units globally. We also summarize acres and hectares for land-scale areas.</p>
           <h3>Are unit conversions exact?</h3>
