--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 </a>
 
                 <!-- Geometry Category -->
-                <a href="geometry.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
+                <a href="/subcategories/geometry.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-amber-500 to-orange-500 p-6 text-white">
                         <div class="flex items-center justify-between">
                             <div>
