--- a/math.html
+++ b/math.html
@@ -79,7 +79,7 @@
 <h3>Algebra</h3>
 <p>Linear equations, quadratic formula, systems, factoring tools.</p>
 </a>
-<a class="card" href="/geometry.html">
+<a class="card" href="/subcategories/geometry.html">
 <h3>Geometry</h3>
 <p>Area/volume calculators, triangles, circles, polygons, coordinate geometry.</p>
 </a>
