--- a/right-triangle.html
+++ b/right-triangle.html
@@ -241,14 +241,14 @@
 <a aria-label="CalcDomain Home" class="brand" href="/">CalcDomain</a>
 <nav aria-label="Primary" class="site-nav">
 <a href="https://calcdomain.com/math.html">Math</a>
-<a href="https://calcdomain.com/geometry.html">Geometry</a>
+<a href="https://calcdomain.com/subcategories/geometry.html">Geometry</a>
 <a href="https://calcdomain.com/about.html">About</a>
 </nav>
 </div>
 </header>
 <main id="main-content">
 <nav aria-label="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/geometry.html">Geometry</a> / Right Triangle Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/subcategories/geometry.html">Geometry</a> / Right Triangle Calculator
     </nav>
 <h1>Right Triangle Calculator</h1>
 <p class="lead">Compute every property of a right triangle from any two independent values. Ideal for students, educators, and professionals who need fast, accurate, and accessible results grounded in authoritative mathematics.</p>
