--- a/triangle.html
+++ b/triangle.html
@@ -286,7 +286,7 @@
 <div class="header-wrap">
 <a aria-label="CalcDomain Home" class="brand" href="/">CalcDomain</a>
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/geometry.html">Geometry</a> / Triangle Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/subcategories/geometry.html">Geometry</a> / Triangle Calculator
       </nav>
 </div>
 </header>
