--- a/math-conversions.html
+++ b/math-conversions.html
@@ -189,7 +189,7 @@
                             </a>
                         </div>
                         <div class="mt-4 text-center">
-                            <a href="subcategories/geometry.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
+                            <a href="/subcategories/geometry.html" class="inline-flex items-center text-blue-600 hover:text-blue-700 font-semibold">
                                 View All Geometry Calculators
                                 <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                             </a>
