--- a/surface-area.html
+++ b/surface-area.html
@@ -294,7 +294,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/geometry.html">Geometry</a> / Surface Area Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/math.html">Math</a> / <a href="https://calcdomain.com/subcategories/geometry.html">Geometry</a> / Surface Area Calculator
       </nav>
 <h1>Surface Area Calculator</h1>
 <p>This professional-grade surface area calculator helps students, engineers, and makers compute total and lateral surface areas for common 3D shapes. It supports multiple units, instant validation, and a clear, accessible interface designed for accuracy and speed.</p>
