--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,10 @@
     .faq-item:last-child { border-bottom: none; }
   </style>
 
+  <link rel="preload" href="/assets/js/mobile-menu.js" as="script">
+  <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+  <script src="search.js" defer></script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -49,14 +53,42 @@
   </script>
 </head>
 <body class="bg-gray-50 text-gray-800">
-  <header class="bg-white shadow-sm sticky top-0 z-40">
+  <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="container mx-auto px-4 lg:px-6 py-4">
-      <div class="flex items-center justify-between">
+      <div class="flex justify-between items-center">
         <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
-        <div class="hidden md:flex items-center space-x-6">
-          <a href="index.html" class="text-gray-700 hover:text-blue-600">Home</a>
-          <a href="about.html" class="text-gray-700 hover:text-blue-600">About</a>
-          <a href="contact.html" class="text-blue-600 font-medium">Contact</a>
+
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
+            <input type="search" id="search-input" placeholder="Search for a calculator..."
+                   class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+                   autocomplete="off">
+            <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400"
+                 fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+            </svg>
+            <div id="search-results" class="absolute top-full left-0 right-0 hidden bg-white border border-gray-200 rounded-lg shadow-lg mt-2 max-h-96 overflow-y-auto z-50"></div>
+          </div>
+        </div>
+
+        <div class="hidden md:flex items-center space-x-6 text-sm">
+          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+
+        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+
+      <div id="mobile-menu" class="md:hidden mt-4 hidden">
+        <div class="space-y-2">
+          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
@@ -75,7 +107,7 @@
         <div class="contact-icon">📧</div>
         <h3 class="text-xl font-semibold mb-2">Email Us</h3>
         <p class="text-gray-600 text-sm mb-4">For detailed inquiries, suggestions, or technical questions</p>
-        <a href="mailto:support@calcdomain.com" class="text-blue-600 font-semibold hover:underline">support@calcdomain.com</a>
+        <a href="mailto:info@yeahup.net" class="text-blue-600 font-semibold hover:underline">info@yeahup.net</a>
         <p class="text-xs text-gray-500 mt-3">Response time: 24-48 hours</p>
       </div>
 
@@ -83,7 +115,7 @@
         <div class="contact-icon">💬</div>
         <h3 class="text-xl font-semibold mb-2">General Inquiries</h3>
         <p class="text-gray-600 text-sm mb-4">Business partnerships, media requests, or general questions</p>
-        <a href="mailto:info@calcdomain.com" class="text-blue-600 font-semibold hover:underline">info@calcdomain.com</a>
+        <a href="mailto:info@calcdomain.com" class="text-blue-600 font-semibold hover:underline">info@yeahup.net</a>
         <p class="text-xs text-gray-500 mt-3">Response time: 24-48 hours</p>
       </div>
 
@@ -91,7 +123,7 @@
         <div class="contact-icon">🐛</div>
         <h3 class="text-xl font-semibold mb-2">Report Issues</h3>
         <p class="text-gray-600 text-sm mb-4">Found a bug or calculator error? Help us improve</p>
-        <a href="mailto:bugs@calcdomain.com" class="text-blue-600 font-semibold hover:underline">bugs@calcdomain.com</a>
+        <a href="mailto:bugs@calcdomain.com" class="text-blue-600 font-semibold hover:underline">yeahupsrl+bugs@gmail.com</a>
         <p class="text-xs text-gray-500 mt-3">Response time: 12-24 hours</p>
       </div>
     </div>
@@ -331,10 +363,17 @@
   </footer>
 
   <script>
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      const menu = document.getElementById('mobile-menu');
+      menu?.classList.toggle('hidden');
+    });
+
     document.getElementById('contactForm').addEventListener('submit', function(e) {
       // You can add form validation or integrate with your email service here
       // For now, this is a placeholder that would work with Formspree or similar services
     });
   </script>
+  <script defer src="/assets/js/mobile-menu.js"></script>
+  <script defer src="/assets/js/page-enhancements.js"></script>
 </body>
 </html>
